# tauri-plugin-highlander

./: Cargo.toml  README.md  build.rs
.changes/: config.json  initial-release.md
examples/svelte-app/: package.json
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
proto/: launcher.proto
src/: lib.rs
