[package]
name = "tauri-plugin-highlander"
version = "0.1.0"
authors = [ "ioneyed <me@ioneyed.com>" ]
edition = "2018"


[build-dependencies]
tauri-build = { version="1.0.0-beta.4", features = [ "codegen" ] }
tonic-build = "0.5.2"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = [] }
serde_json = "1.0"
netstat = "0.7.0"
sysinfo = "0.20.3"
tonic = "0.5.2"
prost = "0.8"