[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "ioneyed <me@ioneyed.com>" ]
repository = ""
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
tauri-plugin-highlander = { path = "../../../" }

[build-dependencies]
tauri-build = "1.0.0-beta.3"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
